# omniclaw

./: .env  .env.example  .gitignore  AGENTS.md  README.md  build-mac.sh  build.ps1  omniclaw
discord-bot/: README.md  pyproject.toml
discord-bot/src/omniclaw_discord_bot/: __init__.py  bot.py  config.py  main.py  orchestrator_client.py
frontend/: .env  eslint.config.js  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AuthPage.jsx  ChatInput.jsx  ConsentScreen.jsx  GlancePanel.jsx  Header.jsx  HowToUse.jsx  Message.jsx  QuickChips.jsx  SettingsModal.jsx  SetupPage.jsx  Sidebar.jsx  TypingIndicator.jsx  WelcomeScreen.jsx
installer/: omniclaw.iss
installer/macos/: Info.plist
installer/macos/scripts/: postinstall
mcp-server/: .gitignore  AGENTS.MD  Dockerfile  README.md  a_announcement_popup.html  a_news.html  actual_miolist.html  all_news.html  assignmentcontent.html  assignments.html  auth_manager.py  config_paths.py  grades.html  homepage.html  launcher.py  leahome.html  main.py  miodetail.html  miolist.html  omni.py  omniclaw.spec  omnivox_client.py  pyproject.toml  test_calendar.py  test_calendar_parser.py  test_lea_classes.py  test_lea_classes_parser.py  test_lea_details_parser.py  test_mio.py  test_navigation.py  test_news.py  test_server.py  user_store.py  videosanddocuments.html
mcp-server/fixtures/: lea_announcement_fixture.html  lea_assignment_content_fixture.html  lea_assignments_detail_fixture.html  lea_documents_detail_fixture.html  lea_grades_detail_fixture.html
mcp-server/models/: calendar.py  lea_classes.py  lea_details.py  mio.py  news.py
orchestrator/: README.md  pyproject.toml
orchestrator/omniclaw_orchestrator/: config.py  contracts.py  llm.py  main.py  mcp_client.py  server.py  service.py  tool_hints.py
orchestrator/src/omniclaw_orchestrator/: __init__.py  config.py  contracts.py  llm.py  main.py  mcp_client.py  server.py  service.py
orchestrator/tests/: test_service.py  test_tool_hints.py
tui-client/: README.md  pyproject.toml
tui-client/src/omniclaw_tui/: __init__.py  app.py  config.py  main.py  orchestrator_client.py
tui-client/tests/: test_app.py  test_config.py
