[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=3.2.3",
    "httpx>=0.28.0",
    "mcp[cli]>=1.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.49.0",
]
