[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastmcp>=3.2.3",
    "httpx>=0.28.0",
    "mcp[cli]>=1.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.49.0",
    # Auth — JWT validation for the /link-omnivox endpoint
    "python-jose[cryptography]>=3.3.0",
    # Required by FastMCP's OAuthProxy for the upstream OAuth dance
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "pyinstaller>=6.19.0",
]
