[project]
name = "omniclaw-orchestrator"
version = "0.1.0"
description = "Lightweight AI orchestration layer for Discord + MCP servers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.10.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
omniclaw-orchestrator = "omniclaw_orchestrator.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omniclaw_orchestrator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
